--- a/libosdk/AUTHORS
+++ b/libosdk/AUTHORS
@@ -1,1 +1,1 @@
-Maslan - Mohamed Abdelsalam Aslan Abdelsalam <maslan@users.sf.net>
+Maslan - Mohamed Abdelsalam Aslan Abdelsalam <maslan@users.berlios.de>
