--- a/libosdk/TODO
+++ b/libosdk/TODO
@@ -1,5 +1,11 @@
-LibOSDK-0.0.4:
-1- Paging.
+LibOSDK-0.1.0:
+1- CMOS read & write support.
 
-LibOSDK-0.0.5:
+LibOSDK-0.1.1:
+1- paging support.
+
+LibOSDK-0.1.2:
+1- cpuid & frequency support.
+
+LibOSDK-0.1.3:
 1- solving no tasks while interrupts enabled bug.
